Remove unnecessary library copying per @jjomier feedback - RPATH handles it
RPATH is already properly configured with:
- $ORIGIN/lib (libraries relative to executable)
- System library paths
- CMAKE_INSTALL_PREFIX/lib
- Holoscan library paths
- INSTALL_RPATH_USE_LINK_PATH TRUE (auto-adds link directories)

The runtime linker will find libraries via RPATH without manual copying,
following standard CMake best practices for library management.

Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/operators/streaming_client/CMakeLists.txt
+++ b/operators/streaming_client/CMakeLists.txt
@@ -79,8 +79,7 @@ set_target_properties(streaming_client_operator PROPERTIES
   INSTALL_RPATH_USE_LINK_PATH TRUE
 )
 
-# Copy Streaming libraries to the build directory using helper function
-copy_streaming_libraries(streaming_client_operator "${CMAKE_CURRENT_BINARY_DIR}/lib")
+# Note: Libraries found via RPATH - no copying needed
 
 # Copy the operator library to the application directory
 add_custom_command(TARGET streaming_client_operator POST_BUILD
