--- a/applications/streaming_client_demo/cpp/CMakeLists.txt
+++ b/applications/streaming_client_demo/cpp/CMakeLists.txt
@@ -28,6 +28,8 @@ add_executable(streaming_client_demo
     streaming_client_demo.cpp
 )
 
+
+
 # Set compile definitions
 target_compile_definitions(streaming_client_demo
     PRIVATE
@@ -122,4 +124,9 @@ install(
     FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.yaml"
     DESTINATION bin
+)
+
+# Copy to build directory
+add_custom_command(TARGET streaming_client_demo POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_BINARY_DIR}/streaming_client_demo"
 )
