--- a/applications/adv_networking_bench/adv_networking_bench_rivermax_tx.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_rivermax_tx.yaml
@@ -62,9 +62,6 @@ advanced_network:
             #allocator_type: "huge_page_2mb"
             verbose: true
             sleep_between_operations: false
-            local_ip_address: 2.1.0.12
-            destination_ip_address: 224.1.1.2
-            destination_port: 50001
             stats_report_interval_ms: 1000
             send_packet_ext_info: true
             video_format: YCbCr-4:2:2
@@ -73,6 +70,19 @@ advanced_network:
             frame_height: 1080
             frame_rate: 60
             dummy_sender: false
+            tx_threads:
+            - thread_id: 0
+              network_settings:
+              - stream_id: 0
+                local_ip_address: 1.1.164.19
+                destination_ip_address: 224.1.50.1
+                destination_port: 50505
+            - thread_id: 1
+              network_settings:
+              - stream_id: 1
+                local_ip_address: 1.1.164.19
+                destination_ip_address: 224.1.50.2
+                destination_port: 50505
 
 bench_tx:
   interface_name: cc:00.1
