Op: Update "slang_shader" minimum CUDAToolkit version
In reflection of app build failures observed with NVCC 12.6 on bare
metal IGX dGPU (IGX OS 1.1.2)

```
[ 80%] Building CXX object operators/slang_shader/CMakeFiles/slang_shader.dir/slang_shader_op.cpp.o
In file included from /home/tbirdsong/repos/holohub/operators/slang_shader/slang_shader.hpp:28,
                 from /home/tbirdsong/repos/holohub/operators/slang_shader/slang_shader.cpp:18:
/home/tbirdsong/repos/holohub/operators/slang_shader/cuda_utils.hpp:83:21: error: ‘cudaLibrary_t’ was not declared in this scope; did you mean ‘cudaArray_t’?
   83 |     std::unique_ptr<cudaLibrary_t, Deleter<cudaLibrary_t, &cudaLibraryUnload>>;
      |                     ^~~~~~~~~~~~~
      |                     cudaArray_t
```

It appears that CUDA Runtime library management APIs were introduced in
CUDA Toolkit 12.8

Ref: https://docs.nvidia.com/cuda/archive/12.8.0/cuda-driver-api/group__CUDA__LIBRARY.html#group__CUDA__LIBRARY
Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/operators/slang_shader/CMakeLists.txt
+++ b/operators/slang_shader/CMakeLists.txt
@@ -19,6 +19,7 @@ project(slang_shader)
 
 find_package(holoscan 3.3.0 REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
+find_package(CUDAToolkit 12.8 REQUIRED)
 
 # Fetch Slang
 include(FetchContent)
