Set failIfEmpty to false for PR only changes
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/.github/workflows/check_urls.yml
+++ b/.github/workflows/check_urls.yml
@@ -47,6 +47,7 @@ jobs:
           --no-progress
           ${{ steps.changed-files.outputs.changed_files_list }}
         fail: true
+        failIfEmpty: false
         jobSummary: true
 
     - name: Link checker (all files)
