Fix streaming_client_demo build and streaming_server_demo pattern
- Make OpenCV dependency optional in cpp/CMakeLists.txt
- Add conditional include directories and linking for OpenCV
- Add Python CMakeLists.txt for proper file copying and installation
- Use HOLOHUB_BUILD_PYTHON conditional for Python subdirectory
- Ensure consistent structure between streaming_server_demo and streaming_client_demo

Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/streaming_client_demo/cpp/CMakeLists.txt
+++ b/applications/streaming_client_demo/cpp/CMakeLists.txt
@@ -20,7 +20,7 @@ set(SOURCE_FILE "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.cpp")
 
 # Find required packages
 find_package(CUDAToolkit REQUIRED)
-find_package(OpenCV REQUIRED)
+find_package(OpenCV QUIET)
 find_package(holoscan REQUIRED)
 
 # Add executable
@@ -54,18 +54,27 @@ target_compile_options(streaming_client_demo
     $<$<COMPILE_LANGUAGE:CXX>:-Wno-sign-compare>
 )
 
-# Add include directories
-target_include_directories(streaming_client_demo PUBLIC $<BUILD_INTERFACE:${OpenCV_INCLUDE_DIRS}>)
+# Add include directories conditionally
+if(OpenCV_FOUND)
+    target_include_directories(streaming_client_demo PUBLIC $<BUILD_INTERFACE:${OpenCV_INCLUDE_DIRS}>)
+endif()
 
 # Link libraries
 target_link_libraries(streaming_client_demo
     PUBLIC
     holoscan::core
     holoscan::ops::streaming_client
-    ${OpenCV_LIBS}
     CUDA::cudart
     CUDA::cuda_driver
 )
+
+# Link OpenCV if found
+if(OpenCV_FOUND)
+    target_link_libraries(streaming_client_demo PUBLIC ${OpenCV_LIBS})
+    message(STATUS "✓ OpenCV found and linked to streaming_client_demo")
+else()
+    message(STATUS "✓ OpenCV not found - continuing without it for streaming_client_demo")
+endif()
 
 # Set target properties
 set_target_properties(streaming_client_demo PROPERTIES
