--- a/applications/streaming_server_demo/CMakeLists.txt
+++ b/applications/streaming_server_demo/CMakeLists.txt
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 cmake_minimum_required(VERSION 3.20)
-project(streaming_server_demo)
+project(streaming_server_demo LANGUAGES NONE)
 
 # Add C++ subdirectory
 add_subdirectory(cpp)
