--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -20,6 +20,8 @@ add_holohub_application(adv_networking_bench DEPENDS
 add_holohub_application(aja_video_capture DEPENDS
                         OPERATORS aja_source)
 
+add_holohub_application(async_buffer_deadline)
+
 add_holohub_application(basic_networking_ping DEPENDS
                         OPERATORS basic_network)
 
