SlangShaderOp: Use CUDA driver API instead of runtime API
Runtime API for CUDA library management needs at least
CTK 12.8 but we want to support earlier versions also.

Signed-off-by: Andreas Heumann <aheumann@nvidia.com>

--- a/operators/slang_shader/cpp/CMakeLists.txt
+++ b/operators/slang_shader/cpp/CMakeLists.txt
@@ -59,7 +59,7 @@ target_link_libraries(slang_shader
   PUBLIC
     holoscan::core
   PRIVATE
-    CUDA::cudart
+    CUDA::cuda_driver
     slang::slang
     nlohmann_json::nlohmann_json
 )
