App: colonoscopy_segmentation Dockerfile updates
Addresses observed issues:
- Docker build: Debian frontend defaults to "teletype" rather than
  "noninteractive" during apt install
- App runtime: observed CuPy NVRTC failures due to missing CUDA math headers

```
cupy_backends.cuda.libs.nvrtc.NVRTCError: NVRTC_ERROR_COMPILATION (6)
...
cupy.cuda.compiler.CompileException: /usr/local/lib/python3.12/dist-packages/cupy/_core/include/cupy/carray.cuh(57): catastrophic error: cannot open source file "cuda_fp16.h"
```

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/colonoscopy_segmentation/Dockerfile
+++ b/applications/colonoscopy_segmentation/Dockerfile
@@ -17,6 +17,8 @@
 
 FROM nvcr.io/nvidia/cuda:12.9.0-base-ubuntu24.04
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 # Install the dependencies
 # wget, unzip and ffmpeg are needed to download NGC-CLI and generate input data
 # python packages are required for the application
@@ -31,6 +33,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         patch \
         ffmpeg \
         libnpp-12-9 \
+        cuda-cudart-dev-12-9 \
         cuda-nvrtc-12-9 \
         libnvinfer10=*+cuda12.9 \
         libnvinfer-lean10=*+cuda12.9 \
