fix: resolve streaming_client_demo installation errors
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/streaming_client_demo/python/CMakeLists.txt
+++ b/applications/streaming_client_demo/python/CMakeLists.txt
@@ -23,5 +23,5 @@ add_custom_target(python_streaming_client_demo ALL
 # Install application and dependencies into the install/ directory for packaging
 install(
   FILES streaming_client_demo.py
-  DESTINATION bin/streaming_client_demo/python
+  DESTINATION bin
 )
